feature/quick-note (#1)
