# docs/swagger.yaml
@@ -1,5 +1,5 @@
 definitions:
-  puso.Puso:
+  note.Note:
     properties:
       color:
         type: string
@@ -18,7 +18,7 @@ paths:
   /healthz:
     get:
       summary: Returns health of the service
-  /puso:
+  /note:
     get:
       consumes:
       - application/json
@@ -29,15 +29,15 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/puso.Puso'
+              $ref: '#/definitions/note.Note'
             type: array
         "404":
           description: Not Found
           schema:
             type: string
-      summary: Get puso list
+      summary: Get note list
       tags:
-      - Puso
+      - Note
     post:
       consumes:
       - application/json
@@ -47,12 +47,12 @@ paths:
         name: data
         required: true
         schema:
-          $ref: '#/definitions/puso.Puso'
+          $ref: '#/definitions/note.Note'
       produces:
       - application/json
       responses:
         "200":
-          description: successfully puso created
+          description: successfully note created
           schema:
             type: string
         "400":
@@ -63,10 +63,10 @@ paths:
           description: Internal Server Error
           schema:
             type: string
-      summary: Create a new puso
+      summary: Create a new note
       tags:
-      - Puso
-  /puso/{id}:
+      - Note
+  /note/{id}:
     delete:
       consumes:
       - application/json
@@ -87,9 +87,9 @@ paths:
           description: Not Found
           schema:
             type: string
-      summary: Delete puso
+      summary: Delete note
       tags:
-      - Puso
+      - Note
     get:
       consumes:
       - application/json
@@ -105,18 +105,18 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/puso.Puso'
+            $ref: '#/definitions/note.Note'
         "404":
           description: Not Found
           schema:
             type: string
-      summary: Get puso
+      summary: Get note
       tags:
-      - Puso
+      - Note
     put:
       consumes:
       - application/json
-      description: Update puso
+      description: Update note
       parameters:
       - description: ID
         in: path
@@ -138,7 +138,7 @@ paths:
           description: Not Found
           schema:
             type: string
-      summary: Update puso
+      summary: Update note
       tags:
-      - Puso
+      - Note
 swagger: "2.0"
